--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="style.css">
 
-  <h1>Funções em JavaScript</h1>
+  <h1>Atividade JavaScript</h1>
 
   <button onclick="MaiorMenor()">1) Maior e Menor</button>
   <button onclick="Vogal()">2) Verificar Vogal</button>
