--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Atividade JavaScript</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
   <h1>Atividade JavaScript</h1>
 
-  <button onclick="MaiorMenor()">1) Maior e Menor</button>
-  <button onclick="Vogal()">2) Verificar Vogal</button>
-  <button onclick="Limites()">3) Pares no Intervalo</button>
-  <button onclick="Ordem()">4) Ordenar Números</button>
-  <button onclick="PositivoNegativo()">5) Positivo ou Negativo</button>
-  <button onclick="ParImpar()">6) Par ou Ímpar</button>
+  <div class="botoes">
+    <button onclick="MaiorMenor()">1) Maior e Menor</button>
+    <button onclick="Vogal()">2) Verificar Vogal</button>
+    <button onclick="Limites()">3) Pares no Intervalo</button>
+    <button onclick="Ordem()">4) Ordenar Números</button>
+    <button onclick="PositivoNegativo()">5) Positivo ou Negativo</button>
+    <button onclick="ParImpar()">6) Par ou Ímpar</button>
+  </div>
 
   <div id="output"></div>
+
+  <script src="script.js"></script>
+
+</body>
+</html>
